--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,10 @@ jobs:
       - run:
           name: Build
           command: |
-            ls
-            which docker
-            pwd
+            set -x
             tag=0.1.$CIRCLE_BUILD_NUM
-            echo tag=$tag
-            echo docker build -t "steshaw/bt-build-base:$tag" .
-            docker images
+            echo "Tag is $tag"
+            docker build -t "steshaw/bt-build-base:$tag" .
             docker login -username "$DOCKER_USERNAME" -p "$(echo $DOCKER_PASSWORD_BASE64 | base64 -d)"
             docker push steshaw/bt-build-base:$TAG
             docker images
