--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,4 @@ jobs:
             docker login -u "$DOCKER_USERNAME" -p "$(echo $DOCKER_PASSWORD_BASE64 | base64 -d)"
             echo "Pushing image $image"
             docker push "$imageWithTag"
+            docker push "$imageWithBranch"
