--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,11 @@ jobs:
       - run:
           name: Build
           command: |
-            set -eux
             image="steshaw/bt-build-base"
             tag=0.1.$CIRCLE_BUILD_NUM
             imageWithTag="$image:$tag"
-            imageWithBranch="$image:${CIRCLE_BRANCH}"
-            echo "Pull $imageWithBranch"
-            docker pull "$imageWithBranch"
             echo "Building image $imageWithTag"
-            docker build -t "$imageWithTag" -t "$imageWithBranch" .
+            docker build -t "$imageWithTag"
             docker login -u "$DOCKER_USERNAME" -p "$(echo $DOCKER_PASSWORD_BASE64 | base64 -d)"
             echo "Pushing image $image"
             docker push "$imageWithTag"
-            docker push "$imageWithBranch"
