--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             tag=0.1.$CIRCLE_BUILD_NUM
             imageWithTag="$image:$tag"
             echo "Building image $imageWithTag"
-            docker build -t "$imageWithTag"
+            docker build -t "$imageWithTag" .
             docker login -u "$DOCKER_USERNAME" -p "$(echo $DOCKER_PASSWORD_BASE64 | base64 -d)"
             echo "Pushing image $image"
             docker push "$imageWithTag"
